app/assets/stylesheets/home.css.scss
// Place all the styles related to the home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.home {
    background: url(image_path("tacobell.jpg")) no-repeat fixed;
    background-size: cover;
    background-repeat: no-repeat;
    height:100vh;

    &:before {
        content: "";
        display: block;
        position: absolute;
        pointer-events: none;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        background: rgba(0,0,0,0.4)
    }

    .content {
        z-index: 10;
    }
}

